improve the content and add more functionality

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agence d'immobilier</title>
+    <title>Premier Real Estate | About Us</title>
     <!-- Bootstrap 5 -->
     <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css">
     <!-- Font Awesome icons -->
@@ -21,8 +21,8 @@
 
     <main class="landing-page pt-5 mb-5">
         <div class="main-text text-white-50">
-            <h1>A propos de notre Agence</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+            <h1>About Our Agency</h1>
+            <p>Delivering exceptional real estate experiences for nearly two decades</p>
             <div class="d-flex justify-content-center">
                 <button class="btn btn-primary w-100 rounded-pill">View Properties</button>
             </div>
@@ -32,20 +32,24 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h2 class="pb-2">Notre histoire</h2>
+                    <h2 class="pb-2">Our Story</h2>
                     <p class="text-black-50">
-                        Notre Histoire Fondée en 2005, notre agence immobilière a débuté avec une vision simple: 
-                        rendre le processus d'achat et de vente de propriétés aussi transparent et simple que possible
-                        pour nos clients.
-                        Au fil des années, nous avons construit une réputation solide basée sur notre expertise
-                        du marché local et notre engagement envers un service client exceptionnel Notre équipe a grandi,
-                        mais nos valeurs fondamentales restent les mêmes.
-                        Aujourd'hui, nous sommes fiers d'être l'une des agences immobilières les plus respectées 
-                        de la région, avec des milliers de transactions réussies et de clients satisfaits.
+                        Since our founding in 2005, Premier Real Estate has redefined luxury property transactions, 
+                        specializing in high-end residences across America's most desirable markets. With over 
+                        $2 billion in closed deals, our team combines decades of market expertise with personalized 
+                        service to deliver exceptional results.
+                        
+                        What began as a boutique agency has grown into an industry leader, thanks to our 
+                        uncompromising standards and client-first philosophy. We've earned our reputation 
+                        through meticulous attention to detail, market intelligence, and discreet, 
+                        professional service tailored to discerning clients.
+                        
+                        Today, we continue to innovate while maintaining the core values that built our success - 
+                        integrity, excellence, and deep commitment to our clients' goals.
                     </p>
                 </div>
                 <div class="col-md-6">
-                    <img src="assets/images/villa.jpg" class="img-fluid" alt="history-image">
+                    <img src="assets/images/villa.jpg" class="img-fluid" alt="Our Office">
                 </div>
             </div>
         </div>
@@ -54,8 +58,8 @@
     <div class="nos-valuer pt-5 pb-5">
         <div class="container">
             <div class="text-center mb-5">
-                <h2>Nos Valuers</h2>
-                <p class="text-black-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+                <h2>Guiding Principles</h2>
+                <p class="text-black-50">The foundation of every relationship we build</p>
             </div>
             <div class="row text-center">
                 <div class="col-md-4 mb-3">
@@ -63,10 +67,9 @@
                         <div class="card">
                             <i class="fa-solid fa-handshake icon" style="color: #007bff;"></i>
                             <div class="card-body">
-                                <h5 class="card-title mb-3">Intégrité</h5>
+                                <h5 class="card-title mb-3">Integrity</h5>
                                 <p class="card-text">
-                                    Nous croyons en une transparence totale et une honnêteté 
-                                    sans compromis dans toutes nos transactions
+                                    Honest communication and ethical practices form the bedrock of every client relationship
                                 </p>
                             </div>
                         </div>
@@ -79,8 +82,7 @@
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Excellence</h5>
                                 <p class="card-text">
-                                    Nous nous efforçons d'offrir un service exceptionnel qui 
-                                    dépasse les attentes de nos clients à chaque fois.
+                                    Unparalleled service standards from initial consultation through closing and beyond
                                 </p>
                             </div>
                         </div>
@@ -91,10 +93,9 @@
                         <div class="card">
                             <i class="fa-solid fa-users icon" style="color: #28a745;"></i>
                             <div class="card-body">
-                                <h5 class="card-title mb-3">Communauté</h5>
+                                <h5 class="card-title mb-3">Client Focus</h5>
                                 <p class="card-text">
-                                    Nous sommes dévoués à servir et soutenir les communautés dans 
-                                    lesquelles nous vivons et travaillons.
+                                    Customized solutions designed around your unique needs and aspirations
                                 </p>
                             </div>
                         </div>
@@ -107,18 +108,18 @@
     <div class="equipe pt-5 pb-5">
         <div class="container">
             <div class="text-center mb-5">
-                <h2>Notre Équipe</h2>
-                <p class="text-black-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+                <h2>Meet Our Leadership</h2>
+                <p class="text-black-50">The visionaries driving our exceptional service</p>
             </div>
             <div class="row">
                 <div class="col-md-4 mb-3">
                     <div class="feature-box">
                         <div class="card">
-                            <img src="assets/images/luxury.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
+                            <img src="assets/images/luxury.jpg" class="card-img-top" alt="CEO">
                             <div class="card-body">
                                 <div class="card-text text-center">
-                                    <h6 class="mb-0">Luxury Waterfront Villa</h6>
-                                    <p class="text-black-50">123 Lakeview Dr, Beverly Hills</p>
+                                    <h6 class="mb-0">James Wilson</h6>
+                                    <p class="text-black-50">Founder & Chief Executive</p>
                                 </div>
                                 <div class="row">
                                     <ul class="d-flex list-unstyled justify-content-center gap-4">
@@ -151,11 +152,11 @@
                 <div class="col-md-4 mb-3">
                     <div class="feature-box">
                         <div class="card">
-                            <img src="assets/images/luxury.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
+                            <img src="assets/images/luxury.jpg" class="card-img-top" alt="COO">
                             <div class="card-body text-center">
                                 <div class="card-text">
-                                    <h6 class="mb-0">Modern Downtown Apartement</h6>
-                                    <p class="text-black-50">456 Central Ave, Downtown</p>
+                                    <h6 class="mb-0">Emily Chen</h6>
+                                    <p class="text-black-50">Operations Director</p>
                                 </div>
                                 <div class="row">
                                     <ul class="d-flex list-unstyled justify-content-center gap-4">
@@ -188,11 +189,11 @@
                 <div class="col-md-4 mb-3">
                     <div class="feature-box">
                         <div class="card">
-                            <img src="assets/images/luxury.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
+                            <img src="assets/images/luxury.jpg" class="card-img-top" alt="Head of Sales">
                             <div class="card-body text-center">
                                 <div class="card-text">
-                                    <h6 class="mb-0">Spacious Family Home</h6>
-                                    <p class="text-black-50">789 Oak Street, West Hills</p>
+                                    <h6 class="mb-0">Michael Rodriguez</h6>
+                                    <p class="text-black-50">Sales Director</p>
                                 </div>
                                 <div class="row">
                                     <ul class="d-flex list-unstyled justify-content-center gap-4">
@@ -230,7 +231,6 @@
     <special-footer></special-footer>
 
     <script src="assets/js/header_footer.js"></script>
-
     <script src="assets/js/all.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
