--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agence d'immobilier</title>
+    <title>Real Estate Agency | FAQ</title>
     <!-- Bootstrap 5 -->
     <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css">
     <!-- Font Awesome icons -->
@@ -21,10 +21,10 @@
 
     <main class="landing-page mb-5 text-center">
         <div class="main-text text-white-50">
-            <h1>Frequently Asked Questions</h1>
-            <p>Find answers to common questions about buying, selling, and renting properties</p>
+            <h1>Real Estate Questions Answered</h1>
+            <p>Expert guidance for buyers, sellers, and renters</p>            
             <div class="d-flex justify-content-center">
-                <button class="btn btn-primary w-100 rounded-pill">View Properties</button>
+                <button class="btn btn-primary w-100 rounded-pill">Get Personalized Help</button>
             </div>
         </div>
     </main>
@@ -47,15 +47,15 @@
                                 </h2>
                                 <div id="faq1" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                                     <div class="accordion-body">
-                                        Purchasing a property with us is simple:
+                                        Our streamlined 5-step purchasing system:
                                         <ol>
-                                            <li>Browse our available properties online or visit our office</li>
-                                            <li>Schedule a viewing with one of our agents</li>
-                                            <li>Make an offer through your agent once you find the right property</li>
-                                            <li>Complete the necessary paperwork and financial arrangements</li>
-                                            <li>Close the deal and receive your keys!</li>
+                                            <li><strong>Discovery Consultation:</strong> 60-minute needs assessment</li>
+                                            <li><strong>Property Matching:</strong> Customized selections</li>
+                                            <li><strong>Guided Viewings:</strong> Expert-led tours</li>
+                                            <li><strong>Offer Strategy:</strong> Market-based negotiation</li>
+                                            <li><strong>Closing Coordination:</strong> End-to-end support</li>
                                         </ol>
-                                        Our experienced agents will guide you through each step of the process.
+                                        Average timeline: 30-45 days from search to keys.
                                     </div>
                                 </div>
                             </div>
@@ -70,11 +70,10 @@
                                     <div class="accordion-body">
                                         We accept various payment methods to make your property purchase convenient:
                                         <ul>
-                                            <li>Bank transfers</li>
-                                            <li>Certified checks</li>
-                                            <li>Mortgage financing (we work with multiple banks and lenders)</li>
-                                            <li>Installment plans (for select properties)</li>
-                                            <li>Credit cards (for deposits and fees only)</li>
+                                            <li><strong>Traditional Financing:</strong> Partnered with 15+ lenders</li>
+                                            <li><strong>Cash Purchase Programs:</strong> Volume discounts available</li>
+                                            <li><strong>Lease-to-Own:</strong> Rent with option to buy</li>
+                                            <li><strong>Seller Financing:</strong> Select properties qualify</li>
                                         </ul>
                                         For more details about payment options for a specific property, please contact our financial team.
                                     </div>
