--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agence d'immobilier</title>
+    <title>Premier Real Estate | Our Services</title>
     <!-- Bootstrap 5 -->
     <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css">
     <!-- Font Awesome icons -->
@@ -21,8 +21,8 @@
 
     <main class="landing-page mb-5">
         <div class="main-text text-white-50 text-center">
-            <h1>Nos Services</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+            <h1>Our Premium Services</h1>
+            <p>Comprehensive real estate solutions tailored to your unique needs</p>
             <div class="d-flex justify-content-center">
                 <button class="btn btn-primary w-100 rounded-pill">View Properties</button>
             </div>
@@ -32,8 +32,8 @@
     <div class="main-services pt-3 pb-5">
         <div class="container">
             <div class="text-center mb-5">
-                <h2>Services pricipaux</h2>
-                <p class="text-black-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+                <h2>Core Services</h2>
+                <p class="text-black-50">Our flagship offerings for buyers, sellers, and investors</p>
             </div>
             <div class="row">
                 <!-- Card 1 -->
@@ -41,8 +41,8 @@
                     <div class="card">
                         <img src="assets/images/villa.jpg" class="card-img-top" alt="...">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Property 1</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+                            <h5 class="card-title">Luxury Home Sales</h5>
+                            <p class="card-text">Exclusive representation for premium residential properties</p>
                             <a href="#" class="btn btn-primary rounded-pill">View Details</a>
                         </div>
                     </div>
@@ -52,8 +52,8 @@
                     <div class="card">
                         <img src="assets/images/villa.jpg" class="card-img-top" alt="...">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Property 2</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+                            <h5 class="card-title">Investment Properties</h5>
+                            <p class="card-text">Strategic acquisitions for portfolio growth and wealth preservation</p>
                             <a href="#" class="btn btn-primary rounded-pill">View Details</a>
                         </div>
                     </div>
@@ -63,8 +63,8 @@
                     <div class="card">
                         <img src="assets/images/villa.jpg" class="card-img-top" alt="...">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Property 2</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+                            <h5 class="card-title">Property Management</h5>
+                            <p class="card-text">Comprehensive care for your real estate assets</p>
                             <a href="#" class="btn btn-primary rounded-pill">View Details</a>
                         </div>
                     </div>
@@ -74,8 +74,8 @@
                     <div class="card">
                         <img src="assets/images/villa.jpg" class="card-img-top" alt="...">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Property 2</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+                            <h5 class="card-title">Relocation Services</h5>
+                            <p class="card-text">Seamless transition support for domestic and international moves</p>
                             <a href="#" class="btn btn-primary rounded-pill">View Details</a>
                         </div>
                     </div>
@@ -87,8 +87,8 @@
     <div class="equipe pt-5 pb-5 bg-light">
         <div class="container">
             <div class="text-center mb-5">
-                <h2>Services Complémentaires</h2>
-                <p class="text-black-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+                <h2>Specialized Solutions</h2>
+                <p class="text-black-50">Value-added services for discerning clients</p>
             </div>
             <div class="row">
                 <div class="col-md-4 mb-3">
@@ -97,8 +97,8 @@
                             <img src="assets/images/luxury.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
                             <div class="card-body">
                                 <div class="card-text text-center">
-                                    <h6 class="mb-0">Luxury Waterfront Villa</h6>
-                                    <p class="text-black-50">123 Lakeview Dr, Beverly Hills</p>
+                                    <h6 class="mb-0">Market Analysis</h6>
+                                    <p class="text-black-50">Data-driven pricing and valuation reports</p>
                                 </div>
                             </div>
                         </div>
@@ -110,8 +110,8 @@
                             <img src="assets/images/luxury.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
                             <div class="card-body text-center">
                                 <div class="card-text">
-                                    <h6 class="mb-0">Modern Downtown Apartement</h6>
-                                    <p class="text-black-50">456 Central Ave, Downtown</p>
+                                    <h6 class="mb-0">Interior Staging</h6>
+                                    <p class="text-black-50">Premium presentation for maximum appeal</p>
                                 </div>
                             </div>
                         </div>
@@ -123,8 +123,8 @@
                             <img src="assets/images/luxury.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
                             <div class="card-body text-center">
                                 <div class="card-text">
-                                    <h6 class="mb-0">Spacious Family Home</h6>
-                                    <p class="text-black-50">789 Oak Street, West Hills</p>
+                                    <h6 class="mb-0">Legal Support</h6>
+                                    <p class="text-black-50">Expert contract review and negotiation</p>
                                 </div>
                             </div>
                         </div>
@@ -136,8 +136,8 @@
                             <img src="assets/images/luxury.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
                             <div class="card-body">
                                 <div class="card-text text-center">
-                                    <h6 class="mb-0">Luxury Waterfront Villa</h6>
-                                    <p class="text-black-50">123 Lakeview Dr, Beverly Hills</p>
+                                    <h6 class="mb-0">Mortgage Advisory</h6>
+                                    <p class="text-black-50">Customized financing solutions</p>
                                 </div>
                             </div>
                         </div>
@@ -149,8 +149,8 @@
                             <img src="assets/images/luxury.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
                             <div class="card-body text-center">
                                 <div class="card-text">
-                                    <h6 class="mb-0">Modern Downtown Apartement</h6>
-                                    <p class="text-black-50">456 Central Ave, Downtown</p>
+                                    <h6 class="mb-0">Renovation Planning</h6>
+                                    <p class="text-black-50">Design and project management</p>
                                 </div>
                             </div>
                         </div>
@@ -162,8 +162,8 @@
                             <img src="assets/images/luxury.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
                             <div class="card-body text-center">
                                 <div class="card-text">
-                                    <h6 class="mb-0">Spacious Family Home</h6>
-                                    <p class="text-black-50">789 Oak Street, West Hills</p>
+                                    <h6 class="mb-0">Portfolio Strategy</h6>
+                                    <p class="text-black-50">Long-term investment planning</p>
                                 </div>
                             </div>
                         </div>
@@ -176,30 +176,30 @@
     <div class="reason pt-5 pb-5">
         <div class="container">
             <div class="text-center mb-5">
-                <h2>Pourquois Nous Choisir</h2>
-                <p class="text-black-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+                <h2>Why Choose Us</h2>
+                <p class="text-black-50">The Premier Real Estate difference</p>
             </div>
             <div class="row">
                 <div class="col-md-6">
                     <img src="assets/images/villa.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
                 </div>
                 <div class="col-md-6">
-                    <div class="row">
+                    <div class="row text-center text-md-start">
                         <div class="col-md-12">
-                            <h5>Expertise locale</h5>
-                            <p>Our team has extensive knowledge of the local real estate market, allowing you to make informed decisions.</p>
+                            <h5>Local Market Mastery</h5>
+                            <p>Decades of neighborhood-specific expertise across all price points</p>
                         </div>
                         <div class="col-md-12">
-                            <h5>Expertise locale</h5>
-                            <p>Our team has extensive knowledge of the local real estate market, allowing you to make informed decisions.</p>
+                            <h5>Discreet Service</h5>
+                            <p>Strict confidentiality for high-profile clients and transactions</p>
                         </div>
                         <div class="col-md-12">
-                            <h5>Expertise locale</h5>
-                            <p>Our team has extensive knowledge of the local real estate market, allowing you to make informed decisions.</p>
+                            <h5>Global Network</h5>
+                            <p>Connections to top-tier buyers and sellers worldwide</p>
                         </div>
                         <div class="col-md-12">
-                            <h5>Expertise locale</h5>
-                            <p>Our team has extensive knowledge of the local real estate market, allowing you to make informed decisions.</p>
+                            <h5>White-Glove Approach</h5>
+                            <p>Every detail handled with precision and care</p>
                         </div>
                     </div>
                 </div>
