--- a/testimonials.html
+++ b/testimonials.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agence d'immobilier</title>
+    <title>Real Estate Agency | Testimonial</title>
     <!-- Bootstrap 5 -->
     <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css">
     <!-- Font Awesome icons -->
@@ -21,10 +21,10 @@
 
     <main class="landing-page">
         <div class="main-text text-white-50 text-center">
-            <h1>Client Testimonials</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+            <h1>Our Clients' Success Stories</h1>
+            <p>See how we've helped hundreds find their perfect properties</p>
             <div class="d-flex justify-content-center">
-                <button class="btn btn-primary w-100 rounded-pill">View Properties</button>
+                <button class="btn btn-primary w-100 rounded-pill">Find Your Dream Home</button>
             </div>
         </div>
     </main>
@@ -32,8 +32,8 @@
     <div class="success pt-5 pb-5 bg-light">
         <div class="container">
             <div class="text-center mb-5">
-                <h2>Success Stories</h2>
-                <p class="text-black-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+                <h2>Real People, Exceptional Results</h2>
+                <p class="text-black-50">Hear from homeowners who trusted us with their real estate journey</p>
             </div>
             <div class="row">
                 <div class="col-md-4 mb-3">
@@ -43,8 +43,8 @@
                             <div class="card-body">
                                 <i class="clien-opinion">
                                     <div class="my_border">
-                                        Thanks to Premier Real Estate, we found our dream home in just two weeks!
-                                        Their expertise and dedication made the process seamless.
+                                        "From our first meeting to closing day, the team anticipated our every need. 
+                                        They found us a home that checked all our boxes in a neighborhood we love."
                                     </div>
                                 </i>
                                 <div class="client-info">
@@ -71,14 +71,14 @@
                             <div class="card-body">
                                 <i class="clien-opinion">
                                     <div class="my_border">
-                                        Thanks to Premier Real Estate, we found our dream home in just two weeks!
-                                        Their expertise and dedication made the process seamless.
+                                        "As investors, we appreciate their market insights. They've helped us build 
+                                        a portfolio that generates 12% annual returns through strategic acquisitions."
                                     </div>
                                 </i>
                                 <div class="client-info">
                                     <div>
-                                        <div class="client-name">Michael Rodriguez</div>
-                                        <div class="client-location">Westwood</div>
+                                        <div class="client-name">Marcus Johnson</div>
+                                        <div class="client-location">Downtown LA</div>
                                         <div class="star-rating">
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
@@ -99,14 +99,14 @@
                             <div class="card-body">
                                 <i class="clien-opinion">
                                     <div class="my_border">
-                                        Thanks to Premier Real Estate, we found our dream home in just two weeks!
-                                        Their expertise and dedication made the process seamless.
+                                        "Relocating from New York was stressful, but our agent handled everything - 
+                                        from virtual tours to school district research. We felt supported throughout."
                                     </div>
                                 </i>
                                 <div class="client-info">
                                     <div>
-                                        <div class="client-name">Michael Rodriguez</div>
-                                        <div class="client-location">Westwood</div>
+                                        <div class="client-name">The Chen Family</div>
+                                        <div class="client-location">Pacific Palisades</div>
                                         <div class="star-rating">
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
@@ -138,14 +138,14 @@
                             <div class="card-body">
                                 <i class="clien-opinion">
                                     <div class="my_border">
-                                        Thanks to Premier Real Estate, we found our dream home in just two weeks!
-                                        Their expertise and dedication made the process seamless.
+                                        "After 3 failed attempts with other agents, Premier got our luxury condo sold 
+                                        above asking price in 9 days. Their marketing strategy was brilliant."
                                     </div>
                                 </i>
                                 <div class="client-info">
                                     <div>
-                                        <div class="client-name">Michael Rodriguez</div>
-                                        <div class="client-location">Westwood</div>
+                                        <div class="client-name">Elizabeth Windsor</div>
+                                        <div class="client-location">Malibu</div>
                                         <div class="star-rating">
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
@@ -166,8 +166,9 @@
     <div class="testimonial-carousel pt-5 pb-5 bg-light">
         <div class="container">
             <div class="text-center mb-5">
-                <h2>Featured Testimonials</h2>
-                <p class="text-black-50">What our clients are saying about their experience with us</p>
+                <h2>Continuing Our Legacy of Excellence</h2>
+                <p class="text-black-50">Year after year, we deliver exceptional results for our clients</p>
+                
             </div>
             <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
@@ -189,8 +190,11 @@
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
                                         </div>
-                                        <p class="testimonial-text mb-4">"As a first-time homebuyer, I was nervous about the whole process. The team at Premier Real Estate guided me every step of the way, making what could have been stressful into an exciting journey to homeownership."</p>
-                                        <h5 class="mb-0">Emma Thompson</h5>
+                                        <p class="testimonial-text mb-4">
+                                            "The team's 24/7 availability during our international relocation was 
+                                            incredible. Time zone differences didn't matter - they were always responsive."
+                                        </p>
+                                        <h5 class="mb-0">Olivia Martinez</h5>
                                         <p class="text-black-50">Beverly Hills</p>
                                     </div>
                                 </div>
@@ -210,8 +214,11 @@
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star-half-alt"></i>
                                         </div>
-                                        <p class="testimonial-text mb-4">"Selling our family home of 30 years was an emotional process, but the compassion and professionalism shown by Premier Real Estate made it so much easier. They secured us a great price and handled everything with care."</p>
-                                        <h5 class="mb-0">Robert & Susan Clark</h5>
+                                        <p class="testimonial-text mb-4">
+                                            "As empty nesters downsizing, we needed different expertise than first-time 
+                                            buyers. Their senior specialist understood all the financial nuances perfectly."
+                                        </p>
+                                        <h5 class="mb-0">Richard and Margaret Brown</h5>
                                         <p class="text-black-50">Malibu</p>
                                     </div>
                                 </div>
