--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agence d'immobilier</title>
+    <title>Real Estate Agency | Contact Us</title>
     <!-- Bootstrap 5 -->
     <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css">
     <!-- Font Awesome icons -->
@@ -21,11 +21,9 @@
 
     <main class="landing-page mb-5">
         <div class="main-text text-white-50 text-center">
-            <h1>Contact Us</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
-            <div class="d-flex justify-content-center">
-                <button class="btn btn-primary w-100 rounded-pill">View Properties</button>
-            </div>
+            <h1>Contact Our Team</h1>
+            <p>Get in touch for personalized real estate assistance</p>
+            <button class="btn btn-primary w-100 rounded-pill">Explore Listings</button>
         </div>
     </main>
 
@@ -33,44 +31,61 @@
         <div class="container">
             <div class="row">
                 <div class="card rounded col-md-6 me-5 p-3 mb-4">
-                    <h2 class="text-center">Contact Us</h2>
+                    <h2 class="text-center">Send Us a Message</h2>
                     <form action="" class="row">
-                        <p class="text-center">Fill out the form and we'll get back to you soon as possible.</p>
+                        <p class="text-center">We typically respond within 24 business hours</p>
                         <div class="col-md-6 mb-3">
-                            <label for="name" class="form-label">Name</label>
-                            <input type="text" class="form-control" id="name">
+                            <label for="name" class="form-label">Full Name*</label>
+                            <input type="text" class="form-control" id="name" required>
                         </div>
                         <div class="col-md-6 mb-3">
-                            <label for="email" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="email">
+                            <label for="email" class="form-label">Email*</label>
+                            <input type="email" class="form-control" id="email" required>
                         </div>
                         <div class="col-md-12 mb-3">
                             <label for="message" class="form-label">Subject</label>
                             <input type="email" class="form-control" id="email">
                         </div>
                         <div class="col-md-12 mb-3">
-                            <label for="message" class="form-label">Message</label>
-                            <textarea class="form-control" id="message" rows="3" style="resize: none;"></textarea>
+                            <label for="message" class="form-label">Your Message*</label>
+                            <textarea class="form-control" id="message" rows="3" style="resize: none;" required></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary w-100 rounded-pill">Send</button>
                     </form>
                 </div>
                 <div class="card rounded col-md-5 p-3 mb-4">
-                    <h2 class="text-center">Contact information</h2>
-                    <p class="text-center">Reach out to us directly using the information bellow</p>
-                    <div class="icons">
-                        <i class="fa fa-map-marker-alt p-2 me-3 mt-4 rounded-circle location"></i> <span>123 Main Street, New York, NY 10001</span>
+                    <h2 class="text-center">Our Office</h2>
+                    <p class="text-center">Available Monday through Saturday</p>
+                    <div class="d-flex align-items-start mb-4">
+                        <i class="fa fa-map-marker-alt p-2 me-3 mt-1 rounded-circle location"></i>
+                        <div>
+                            <h6 class="mb-1">Headquarters</h6>
+                            <p class="text-muted mb-0">123 Main Street, New York, NY 10001</p>
+                        </div>
                     </div>
-                    <div class="icons">
-                        <i class="fa fa-phone-alt p-2 me-3 mt-4 rounded-circle phone"></i> <span>+1 123 456 7890</span>
+                    <div class="d-flex align-items-start mb-4">
+                        <i class="fa fa-phone-alt p-2 me-3 mt-1 rounded-circle phone"></i>
+                        <div>
+                            <h6 class="mb-1">Phone</h6>
+                            <p class="text-muted mb-0">+1 (123) 456-7890</p>
+                        </div>
                     </div>
-                    <div class="icons">
-                        <i class="fa-solid fa-envelope p-2 me-3 mt-4 rounded-circle email"></i> <span>anass@gmail.com</span>
+                    <div class="d-flex align-items-start mb-4">
+                        <i class="fa-solid fa-envelope p-2 me-3 mt-1 rounded-circle email"></i>
+                        <div>
+                            <h6 class="mb-1">Email</h6>
+                            <p class="text-muted mb-0">contact@premierrealestate.com</p>
+                        </div>
                     </div>
-                    <div class="icons">
-                        <i class="fa-regular fa-clock p-2 me-3 mt-4 rounded-circle clock"></i> <span>Mon-Fri: 9AM-6PM Sat: 10AM-4PM</span>
+                    <div class="d-flex align-items-start">
+                        <i class="fa-regular fa-clock p-2 me-3 mt-1 rounded-circle clock"></i>
+                        <div>
+                            <h6 class="mb-1">Business Hours</h6>
+                            <p class="text-muted mb-0">Mon-Fri: 9AM-6PM<br>Sat: 10AM-4PM</p>
+                        </div>
                     </div>
-                    <ul class="d-flex mt-5 list-unstyled gap-4 justify-content-center justify-content-md-start">
+                    <h6 class="mb-3 text-center mt-3">Connect With Us</h6>
+                    <ul class="d-flex list-unstyled gap-3 justify-content-center justify-content-md-start">
                         <li>
                             <a href="#" class="d-block">
                                 <i class="fa-brands fa-facebook fa-lg facebook rounded-circle p-2  me-3"></i>
@@ -105,7 +120,7 @@
 </html>
 
 <!-- <div class="col-md-6">
-    <h2 class="text-center">Our Location</h2>
+    <h2 class="text-center mb-4">Our Location</h2>
     <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3320.682013292073!2d-7.631073684800573!3d33.59000038073669!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xda7f6b1b1b1b1b1%3A0x1b3b3b3b3b3b3b3!2sAgence%20immobili%C3%A8re%20-%20Casa%20Anfa!5e0!3m2!1sfr!2sma!4v1629783660001!5m2!1sfr!2sma"
         width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
