--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agence d'immobilier</title>
+    <title>Real Estate Agency</title>
     <!-- Bootstrap 5 -->
     <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css">
     <!-- Font Awesome icons -->
@@ -22,9 +22,9 @@
     <main class="landing-page mb-5">
         <div class="main-text text-white-50">
             <h1>Find Your Dream Home With Us</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+            <p>Discover exceptional properties tailored to your lifestyle and budget.</p>
             <div class="d-flex justify-content-center">
-                <button class="btn btn-primary w-100 rounded-pill">View Properties</button>
+                <button class="btn btn-primary w-100 rounded-pill" onclick="window.location.href = 'properties.html'">View Properties</button>
             </div>
         </div>
     </main>
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="text-center mb-5">
                 <h2>Featured Properties</h2>
-                <p class="text-black-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+                <p class="text-black-50">Explore our curated selection of premium homes in prime locations.</p>
             </div>
             <div class="row">
                 <div class="col-md-4 mb-3">
@@ -43,7 +43,7 @@
                                 <h4 class="text-danger">$1,250,000</h4>
                                 <div class="card-text">
                                     <h6 class="mb-0">Luxury Waterfront Villa</h6>
-                                    <p class="text-black-50">123 Lakeview Dr, Beverly Hills</p>
+                                    <p class="text-black-50">123 Lakeview Dr, Beverly Hills</p>  
                                 </div>
                                 <hr>
                                 <div class="row">
@@ -129,7 +129,7 @@
         <div class="container">
             <div class="text-center mb-5">
                 <h2>Our Services</h2>
-                <p class="text-black-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+                <p class="text-black-50">Comprehensive real estate solutions to meet all your needs.</p>
             </div>
             <div class="row text-center">
                 <div class="col-md-3 mb-3">
@@ -138,10 +138,7 @@
                             <i class="fa fa-home icon"></i>
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Rent Property</h5>
-                                <p class="card-text">
-                                    Lorem ipsum dolor sit amet 
-                                    consectetur adipisicing elit. Quisquam,quod.
-                                </p>
+                                <p class="card-text">Find your perfect rental home with our extensive listings and personalized service.</p>
                             </div>
                         </div>
                     </div>
@@ -152,10 +149,7 @@
                             <i class="fa fa-search icon" style="color: hsl(240, 100%, 50%);"></i>
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Property Search</h5>
-                                <p class="card-text">
-                                    Lorem ipsum dolor sit amet 
-                                    consectetur adipisicing elit. Quisquam,quod.
-                                </p>
+                                <p class="card-text">Let our experts help you find properties that match your exact requirements.</p>
                             </div>
                         </div>
                     </div>
@@ -166,10 +160,7 @@
                             <i class="fa-solid fa-chart-simple icon" style="color: hsl(120, 87%, 54%);"></i>
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Market Analysis</h5>
-                                <p class="card-text">
-                                    Lorem ipsum dolor sit amet 
-                                    consectetur adipisicing elit. Quisquam,quod.
-                                </p>
+                                <p class="card-text">Get data-driven insights to make informed real estate decisions.</p>
                             </div>
                         </div>
                     </div>
@@ -180,10 +171,7 @@
                             <i class="fa-solid fa-building-columns icon" style="color: hsl(39, 96%, 47%);"></i>
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Commercial Properties</h5>
-                                <p class="card-text">
-                                    Lorem ipsum dolor sit amet 
-                                    consectetur adipisicing elit. Quisquam,quod.
-                                </p>
+                                <p class="card-text">Expert guidance for your business property investments and leases.</p>
                             </div>
                         </div>
                     </div>
@@ -194,8 +182,8 @@
     <div class="comment pt-5 pb-5">
         <div class="container">
             <div class="text-center mb-5">
-                <h2 class="mb-4">What Our Clients Say</h2>
-                <p class="text-black-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+                <h2 class="mb-4">Client Testimonials</h2>
+                <p class="text-black-50">Hear what our satisfied clients have to say about their experiences.</p>
             </div>
         </div>
         <div class="container">
@@ -203,13 +191,10 @@
                 <div class="card text-center">
                     <div class="card-body">
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.
-                            <br>
-                            <span class="fw-bold">John Doe</span>
-                            <span class="fw-bold">Jane Smith</span>
+                            "The team went above and beyond to help us find our perfect family home. Their professionalism and attention to detail made the entire process seamless."
+                            <br><br>
+                            <span class="fw-bold">John Doe</span><br>
+                            <span class="fw-bold">Jane Smith</span><br>
                             <span class="fw-bold">Alice Johnson</span>
                         </p>
                     </div>
